<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart_electricity"
        android:layout_width="0dp"
        android:layout_height="230sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_aaaaaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_chart_electricity" />

    <TextView
        android:id="@+id/text_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/month"
        android:textColor="@color/black_3f3a3a"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/text_scale_last"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/text_scale_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:text="@string/scale_last"
        android:textColor="@color/black_3f3a3a"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_month"
        app:layout_constraintEnd_toStartOf="@+id/text_scale_this"
        app:layout_constraintStart_toEndOf="@+id/text_month"
        app:layout_constraintTop_toTopOf="@+id/text_month" />

    <TextView
        android:id="@+id/text_scale_this"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:text="@string/scale_this"
        android:textColor="@color/black_3f3a3a"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_month"
        app:layout_constraintEnd_toStartOf="@+id/text_scale_total"
        app:layout_constraintStart_toEndOf="@+id/text_scale_last"
        app:layout_constraintTop_toTopOf="@+id/text_month" />

    <TextView
        android:id="@+id/text_scale_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:text="@string/scale_total"
        android:textColor="@color/black_3f3a3a"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_month"
        app:layout_constraintEnd_toStartOf="@+id/text_price"
        app:layout_constraintStart_toEndOf="@+id/text_scale_this"
        app:layout_constraintTop_toTopOf="@+id/text_month"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/electricity_fee"
        android:textColor="@color/black_3f3a3a"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_scale_total"
        app:layout_constraintTop_toTopOf="@+id/text_month"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/black_3f3a3a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_month" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_electricities_tenant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

</android.support.constraint.ConstraintLayout>