<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true">

    <EditText
        android:id="@+id/edit_text_tenant_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_board"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/enter_tenant_email"
        android:padding="@dimen/edit_text_padding"
        android:textColor="@color/black_3f3a3a"
        android:textSize="16sp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_search_tenant_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_tenant_email"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_tenant_email"
        app:layout_constraintTop_toTopOf="@+id/edit_text_tenant_email"
        app:srcCompat="@drawable/ic_action_search" />

    <ImageView
        android:id="@+id/image_tenant_picture_inviting"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_nav_profile"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_tenant_email" />

    <Button
        android:id="@+id/button_inviting"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/invitation_send_button_board"
        android:fontFamily="@font/noto_sans"
        android:text="@string/inviting"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_tenant_name_inviting" />

    <TextView
        android:id="@+id/text_view_tenant_name_inviting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/tenant"
        android:textSize="16sp"
        android:textColor="@color/black_3f3a3a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_tenant_picture_inviting" />

    <TextView
        android:id="@+id/text_view_tenant_not_exist_inviting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/no_tenant_exist"
        android:textColor="@color/black_3f3a3a"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_tenant_picture_inviting" />

</android.support.constraint.ConstraintLayout>